--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Libraries/srelay"]
 	path = Libraries/srelay
-	url = git@github.com:jeromelebel/srelay.git
+	url = git@github.com:NerdPhysics1/srelay.git
